# sonoloc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/01_doa_estimation/: README.md  run.py
examples/02_weak_sed/: README.md  run.py
sonoloc/: __init__.py  cli.py  config.py
sonoloc/data/: __init__.py  noise.py  scene.py  simulate.py
sonoloc/detection/: __init__.py  mil.py  pooling.py
sonoloc/features/: __init__.py  gcc.py  intensity.py  logmel.py  pipeline.py  stft.py
sonoloc/io/: __init__.py  arrays.py  audio.py
sonoloc/labels/: __init__.py  accdoa.py  events.py
sonoloc/localization/: __init__.py  grid.py  music.py  srp_phat.py  steering.py
sonoloc/metrics/: __init__.py  detection.py  localization.py  seld_score.py
sonoloc/models/: __init__.py  accdoa.py  crnn.py  seld_model.py
tests/: __init__.py  conftest.py  test_accdoa.py  test_arrays.py  test_audio.py  test_cli.py  test_config.py  test_gcc.py  test_grid.py  test_intensity.py  test_logmel.py  test_metrics_detection.py  test_metrics_localization.py  test_mil.py  test_models.py  test_music.py  test_noise.py  test_pipeline.py  test_pooling.py  test_seld_score.py  test_simulate.py  test_srp_phat.py  test_stft.py  test_version.py
