[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonoloc"
dynamic = ["version"]
description = "多通道声学事件检测与声源定位（SELD）工具箱"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Lucy Liang" }]
keywords = ["seld", "sound-event-detection", "doa", "acoustics", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "soundfile>=0.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/juliag106/sonoloc"
Issues = "https://github.com/juliag106/sonoloc/issues"

[project.scripts]
sonoloc = "sonoloc.cli:main"

[tool.hatch.version]
path = "sonoloc/version.py"

[tool.hatch.build.targets.wheel]
packages = ["sonoloc"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"examples/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sonoloc"]

[tool.mypy]
python_version = "3.12"
packages = ["sonoloc"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
