[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonoloc"
dynamic = ["version"]
description = "多通道声学事件检测与声源定位（SELD）工具箱"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Lucy Liang" }]
keywords = ["seld", "sound-event-detection", "doa", "acoustics", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "soundfile>=0.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/juliag106/sonoloc"
Issues = "https://github.com/juliag106/sonoloc/issues"

[tool.hatch.version]
path = "sonoloc/version.py"

[tool.hatch.build.targets.wheel]
packages = ["sonoloc"]
